crates/keron-lang/tests/corpus/errors/parse/empty_interpolation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected `"`, expected expression
  --> 1:9
  |
1 | val a = "${}"
  |         ^
  = help: write an expression (literal, name, call, or `(…)`).
